Closed
Bug 754329
Opened 13 years ago
Closed 13 years ago
Crash with cairo mutexes enabled
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: marco, Assigned: marco)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
Firefox crashes if built with cairo mutexes enabled.
Stack trace attached.
Comment 1•13 years ago
|
||
marco: BenWa, I see cairo_debug_reset_static_data is being called before destroying a cairo surface
marco: maybe this is the problem with the crash
BenWa: marco: Is it mScreenReferenceSurface that's causing the crash?
BenWa: Your theory is good, you should try 2 things: 1) comment out that reset static data call, 2) set 'mScreenReferenceSurface = nsnull' before that function is called (forcing refcount to delete it)
BenWa: Calling cairo_debug_reset_static_data when we still have cairo data allocated is bad so that explains the crash. Its a bit curious that it's windows only however
![]() |
||
Updated•13 years ago
|
Severity: normal → critical
Crash Signature: [@ RtlpWaitOnCriticalSection | RtlEnterCriticalSection | _cairo_atomic_int_dec_and_test]
Keywords: crash
Comment 2•13 years ago
|
||
This crash doesn't happen on trunk, it only happens with a patch from bug 705691.
Severity: critical → normal
![]() |
||
Updated•13 years ago
|
Version: Trunk → Other Branch
Assignee | ||
Comment 3•13 years ago
|
||
I've written a really simple patch to shutdown imgLib after gfxPlatform. Here is the try run: https://tbpl.mozilla.org/?tree=Try&rev=fd8ef74457e7
Assignee: nobody → mar.castelluccio
Status: NEW → ASSIGNED
Comment 4•13 years ago
|
||
Comment on attachment 623398 [details] [diff] [review]
Patch
LGTM. We should run a full set of test before landing it.
Attachment #623398 -
Flags: review?(joe)
Attachment #623398 -
Flags: feedback+
![]() |
||
Updated•13 years ago
|
Attachment #623398 -
Flags: review?(joe) → review+
Comment 5•13 years ago
|
||
Pushed to try:
https://tbpl.mozilla.org/?tree=Try&rev=04ccf2579684
Sorry Macro I was distracted this Friday/weekend, lets get this back on track and landed.
Assignee | ||
Comment 6•13 years ago
|
||
I think we can land this: https://tbpl.mozilla.org/?tree=Try&rev=122b327195b2
Comment 7•13 years ago
|
||
Feel free to tag check-in?bgirard next time to add it to my queue.
Comment 8•13 years ago
|
||
Comment on attachment 623398 [details] [diff] [review]
Patch
https://hg.mozilla.org/integration/mozilla-inbound/rev/5aa6fad6aa88
Attachment #623398 -
Flags: checkin+
Updated•13 years ago
|
Target Milestone: --- → mozilla15
![]() |
||
Comment 9•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•