Bug 754329 - Crash with cairo mutexes enabled. r=joe